# NaijaYield-2025

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_preprocessing_ETL.ipynb
page/: Dashboard.py  farmer_education.py  farmer_portfolio.py  hhid_analytics.py
static/css/: style.css
utils/: __init__.py  functions.py
