[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.5.0",
    "beautifulsoup4>=4.13.4",
    "duckdb==1.1.3",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly==5.24.1",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "streamlit==1.42.0",
]
